# krpg

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  KRPG_FORMAT.md  LICENSE  Makefile  README.md  build_hashes.py  cliff.toml  diagram.plantuml  hashes.json  main.py  old.py  pyproject.toml  requirements.txt  sc.py  scenario.krpg  scenario.py  t.py  test.py  tools.py  updater.py
.github/: PULL_REQUEST_TEMPLATE.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md
.github/workflows/: release.yml
krpg/: __main__.py  actions.py  attributes.py  battle.py  bestiary.py  builder.py  clock.py  command.py  commands.py  components.py  console.py  diary.py  encoder.py  encryptor.py  entity.py  events.py  events_middleware.py  executer.py  game.py  inventory.py  kotazy.py  logger.py  module.py  npc.py  parser.py  player.py  presenter.py  quests.py  random.py  resolver.py  saves.py  scenario.py  scparse.py  settings.py  stats.py  utils.py  world.py
krpg/console/: __init__.py  custom.py  entities.py  render.py  world.py
krpg/content/: main.krpg  map.krpg  npcs.krpg  other.krpg  quests.krpg
krpg/core/: actions.py  console.py  entity.py  events.py  kotazy.py  logger.py  scenario.py
krpg/data/: consts.py  info.py  splash.py  themes.py
krpg/engine/: actions.py  attributes.py  battle.py  bestiary.py  builder.py  clock.py  entity.py  enums.py  executer.py  inventory.py  npc.py  player.py  quests.py  random.py  settings.py  stats.py  world.py
krpg/entity/: bestiary.py  effects.py  entity.py  enums.py  inventory.py  scale.py  skills.py  utils.py
krpg/modules/: base.py  debug.py  player.py  test.py
