[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "krpg"
version = "1.3.0"
description = "**KRPG** - захватывающая приключенческая игра, где вы, исследователь-путешественник, направляетесь в деревню с целью пополнения запасов. Однако прибытие в деревню сталкивает вас с загадочными событиями, заставляя вас задержаться и помочь разгадать тайны и решить проблемы. Ваш выбор остаться открывает двери к опасным приключениям, и вы сталкиваетесь с разнообразными персонажами, каждый из которых несет свои собственные секреты. Ваше путешествие станет важным моментом в судьбе деревни, выяснить происходящее"
authors = [ "Kotaz",]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.0"
msgpack = "^1.0.7"
prompt-toolkit = "^3.0.41"
urllib3 = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
types-urllib3 = "^1.26.25.14"