[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krpg"
version = "2.1.0"
description = "**KRPG** - захватывающая приключенческая игра, где вы, исследователь-путешественник, направляетесь в деревню с целью пополнения запасов. Однако прибытие в деревню сталкивает вас с загадочными событиями, заставляя вас задержаться и помочь разгадать тайны и решить проблемы. Ваш выбор остаться открывает двери к опасным приключениям, и вы сталкиваетесь с разнообразными персонажами, каждый из которых несет свои собственные секреты. Ваше путешествие станет важным моментом в судьбе деревни, выяснить происходящее"
authors = [{ name = "Kotaz" }]
requires-python = "~=3.12.0"
readme = "README.md"
license = "MIT"

dependencies = [
    "rich>=13.7.0,<14",
    "msgpack>=1.0.7,<2",
    "prompt-toolkit>=3.0.36,<4",
    "attrs>=24.2.0,<25",
    "questionary>=2.0.1,<3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1,<0.9",
]

[tool.bandit]
skips = [ "B311",]

[tool.ruff]
line-length = 160
